jasperファイルのディレクトリ情報取得用のAPI追加